# base64id-rs-website

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  vite.config.js
design/: mockup.drawio
src/: convert.rs  lib.rs  types.rs
src-web/: app.html
src-web/lib/: status.svelte
src-web/lib/input/: bit-sign.svelte  bit-size.svelte  random.svelte  text.svelte
src-web/routes/: +layout.js  +layout.svelte  +page.svelte  base64id-tool.svelte
src-web/style/: app.css
src-web/style/font/: font.css
