[package]
name = "base64id-rs-website"
description = "wasm library for base64id-rs website frontend"
authors = ["Shaun Priestley <shaun@cksm.cc>"]
license = "CC-BY-SA-4.0"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
base64id = { version = "0.3", features = [ "std", "rand" ] }
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
thiserror = "1.0.38"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"